--- a/app/src/main/res/layout/activity_view_locations.xml
+++ b/app/src/main/res/layout/activity_view_locations.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".stock.ViewLocationsActivity"
     >
 
     <com.martinwalls.nea.components.CustomRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:visibility="gone"
+        android:layout_height="wrap_content"
+        android:overScrollMode="ifContentScrolls"
         />
 
     <TextView
@@ -19,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/stock_empty"
+        android:text="@string/locations_empty"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
