--- a/app/src/main/res/layout/dialog_add_new_product.xml
+++ b/app/src/main/res/layout/dialog_add_new_product.xml
@@ -57,14 +57,14 @@
         android:visibility="gone"
         >
 
-        <com.martinwalls.nea.ui_components.AddNewTextView
+        <com.martinwalls.nea.components.AddNewTextView
             android:id="@+id/add_new"
             style="@style/SearchResultsItemText.Selectable.AddNew"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
 
-        <com.martinwalls.nea.ui_components.CustomRecyclerView
+        <com.martinwalls.nea.components.CustomRecyclerView
             android:id="@+id/recycler_view_results"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
