--- a/app/src/main/res/layout/activity_choose_currencies.xml
+++ b/app/src/main/res/layout/activity_choose_currencies.xml
@@ -26,7 +26,7 @@
             android:text="@string/exchange_favourites"
             />
 
-        <com.martinwalls.nea.ui_components.CustomRecyclerView
+        <com.martinwalls.nea.components.CustomRecyclerView
             android:id="@+id/favourite_currencies_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
             android:text="@string/exchange_all_currencies"
             />
 
-        <com.martinwalls.nea.ui_components.CustomRecyclerView
+        <com.martinwalls.nea.components.CustomRecyclerView
             android:id="@+id/all_currencies_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
