--- a/app/src/main/res/menu/fragment_stock.xml
+++ b/app/src/main/res/menu/fragment_stock.xml
@@ -17,4 +17,10 @@
         app:showAsAction="ifRoom"
         />
 
+    <item
+        android:id="@+id/action_view_locations"
+        android:title="@string/action_view_locations"
+        app:showAsAction="never"
+        />
+
 </menu>
