add new product, add new meat type activity

--- a/app/src/main/res/layout/dialog_add_new_product.xml
+++ b/app/src/main/res/layout/dialog_add_new_product.xml
@@ -35,8 +35,6 @@
         android:layout_marginTop="@dimen/view_spacing_vertical"
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
         android:hint="@string/stock_product_input_meat_type"
-        app:endIconDrawable="@drawable/ic_add"
-        app:endIconMode="custom"
         >
 
         <AutoCompleteTextView
@@ -48,7 +46,7 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <LinearLayout
+ <!--   <LinearLayout
         android:id="@+id/search_results_layout"
         style="@style/SearchResultsLayout"
         android:layout_width="match_parent"
@@ -77,7 +75,7 @@
             android:layout_height="wrap_content"
             android:text="@string/search_no_matches"
             />
-    </LinearLayout>
+    </LinearLayout>-->
 
     <RelativeLayout
         android:layout_width="match_parent"
