--- a/app/src/main/res/menu/fragment_stock.xml
+++ b/app/src/main/res/menu/fragment_stock.xml
@@ -18,8 +18,20 @@
         />
 
     <item
-        android:id="@+id/action_view_locations"
-        android:title="@string/action_view_locations"
+        android:id="@+id/action_edit_locations"
+        android:title="@string/action_edit_locations"
+        app:showAsAction="never"
+        />
+
+    <item
+        android:id="@+id/action_edit_meat_types"
+        android:title="@string/action_edit_meat_types"
+        app:showAsAction="never"
+        />
+
+    <item
+        android:id="@+id/action_edit_products"
+        android:title="@string/action_edit_products"
         app:showAsAction="never"
         />
 
