--- a/app/src/main/res/layout/activity_edit_locations.xml
+++ b/app/src/main/res/layout/activity_edit_locations.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".stock.ViewLocationsActivity"
+    tools:context=".stock.EditLocationsActivity"
     >
 
     <com.martinwalls.nea.components.CustomRecyclerView
