--- a/app/src/main/res/layout/item_meat_type.xml
+++ b/app/src/main/res/layout/item_meat_type.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="@dimen/item_padding_start"
-    android:paddingEnd="@dimen/item_padding_end"
-    android:paddingTop="@dimen/item_spacing"
-    android:paddingBottom="@dimen/item_spacing"
-    style="@style/ItemTextNormal"
-    />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    >
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingStart="@dimen/item_padding_start"
+        android:paddingEnd="@dimen/item_padding_end"
+        android:paddingTop="@dimen/item_spacing"
+        android:paddingBottom="@dimen/item_spacing"
+        style="@style/ItemTextNormal"
+        />
+
+</LinearLayout>
