colour resource for del colour, dark text style

--- a/app/src/main/res/layout/item_meat_type.xml
+++ b/app/src/main/res/layout/item_meat_type.xml
@@ -15,7 +15,7 @@
         android:paddingEnd="@dimen/item_padding_end"
         android:paddingTop="@dimen/item_spacing"
         android:paddingBottom="@dimen/item_spacing"
-        style="@style/ItemTextNormal"
+        style="@style/ItemTextNormal.Dark"
         />
 
 </LinearLayout>
