--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     >
 
@@ -16,6 +16,19 @@
         android:paddingTop="@dimen/item_spacing"
         android:paddingEnd="@dimen/item_padding_end"
         android:paddingBottom="@dimen/item_spacing"
+        tools:text="Beef hearts"
+        />
+
+    <TextView
+        android:id="@+id/meat_type"
+        style="@style/ItemTextNormal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="@dimen/item_padding_start"
+        android:paddingTop="@dimen/item_spacing"
+        android:paddingEnd="@dimen/item_padding_end"
+        android:paddingBottom="@dimen/item_spacing"
+        tools:text="Beef"
         />
 
 </LinearLayout>
