--- a/app/src/main/res/layout/activity_edit_locations.xml
+++ b/app/src/main/res/layout/activity_edit_locations.xml
@@ -1,37 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".stock.EditLocationsActivity"
     >
 
-    <com.martinwalls.nea.components.CustomRecyclerView
-        android:id="@+id/recycler_view"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_location_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:overScrollMode="ifContentScrolls"
-        />
+        android:layout_marginStart="@dimen/activity_margin_horizontal"
+        android:layout_marginTop="@dimen/view_spacing_vertical"
+        android:layout_marginEnd="@dimen/activity_margin_horizontal"
+        android:hint="@string/locations_input_name"
+        >
 
-    <TextView
-        android:id="@+id/empty"
-        style="@style/EmptyView"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_location_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_location_type"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/locations_empty"
-        />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_add"
-        />
+        android:layout_marginStart="@dimen/activity_margin_horizontal"
+        android:layout_marginTop="@dimen/view_spacing_vertical"
+        android:layout_marginEnd="@dimen/activity_margin_horizontal"
+        android:hint="@string/locations_input_type"
+        >
 
-</RelativeLayout>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_location_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_location_addr_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_horizontal"
+        android:layout_marginTop="@dimen/view_spacing_vertical"
+        android:layout_marginEnd="@dimen/activity_margin_horizontal"
+        android:hint="@string/locations_input_addr_line_1"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_location_addr_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_location_addr_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_horizontal"
+        android:layout_marginTop="@dimen/view_spacing_vertical"
+        android:layout_marginEnd="@dimen/activity_margin_horizontal"
+        android:hint="@string/locations_input_addr_line_2"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_location_addr_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_location_city"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_horizontal"
+        android:layout_marginTop="@dimen/view_spacing_vertical"
+        android:layout_marginEnd="@dimen/activity_margin_horizontal"
+        android:hint="@string/locations_input_city"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_location_city"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_location_postcode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_horizontal"
+        android:layout_marginTop="@dimen/view_spacing_vertical"
+        android:layout_marginEnd="@dimen/activity_margin_horizontal"
+        android:hint="@string/locations_input_postcode"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_location_postcode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_location_country"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_horizontal"
+        android:layout_marginTop="@dimen/view_spacing_vertical"
+        android:layout_marginEnd="@dimen/activity_margin_horizontal"
+        android:hint="@string/locations_input_country"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_location_country"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_location_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_horizontal"
+        android:layout_marginTop="@dimen/view_spacing_vertical"
+        android:layout_marginEnd="@dimen/activity_margin_horizontal"
+        android:hint="@string/locations_input_email"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_location_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionNext"
+            android:inputType="textCapWords"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_location_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/activity_margin_horizontal"
+        android:layout_marginTop="@dimen/view_spacing_vertical"
+        android:layout_marginEnd="@dimen/activity_margin_horizontal"
+        android:hint="@string/locations_input_phone"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_location_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
+            android:inputType="textCapWords"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+</LinearLayout>
