--- a/app/src/main/res/layout/activity_edit_locations.xml
+++ b/app/src/main/res/layout/activity_edit_locations.xml
@@ -1,182 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".stock.EditLocationsActivity"
     >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_location_name"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
-        android:layout_marginEnd="@dimen/activity_margin_horizontal"
-        android:hint="@string/locations_input_name"
+        android:orientation="vertical"
+        tools:context=".stock.EditLocationsActivity"
         >
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_location_name"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_location_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textCapWords"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/view_spacing_vertical"
+            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:hint="@string/locations_input_name"
+            >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_location_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
-        android:layout_marginEnd="@dimen/activity_margin_horizontal"
-        android:hint="@string/locations_input_type"
-        >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_location_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:inputType="textCapWords"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_location_type"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_location_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textCapWords"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/view_spacing_vertical"
+            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:hint="@string/locations_input_type"
+            >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_location_addr_1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
-        android:layout_marginEnd="@dimen/activity_margin_horizontal"
-        android:hint="@string/locations_input_addr_line_1"
-        >
+            <AutoCompleteTextView
+                android:id="@+id/edit_text_location_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:inputType="textCapWords"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_location_addr_1"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_addr_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textCapWords"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/view_spacing_vertical"
+            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:hint="@string/locations_input_addr_line_1"
+            >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_location_addr_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
-        android:layout_marginEnd="@dimen/activity_margin_horizontal"
-        android:hint="@string/locations_input_addr_line_2"
-        >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_addr_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:inputType="textCapWords"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_location_addr_2"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_addr_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textCapWords"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/view_spacing_vertical"
+            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:hint="@string/locations_input_addr_line_2"
+            >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_location_city"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
-        android:layout_marginEnd="@dimen/activity_margin_horizontal"
-        android:hint="@string/locations_input_city"
-        >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_addr_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:inputType="textCapWords"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_location_city"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textCapWords"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/view_spacing_vertical"
+            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:hint="@string/locations_input_city"
+            >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_location_postcode"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
-        android:layout_marginEnd="@dimen/activity_margin_horizontal"
-        android:hint="@string/locations_input_postcode"
-        >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:inputType="textCapWords"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_location_postcode"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_postcode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textCapWords"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/view_spacing_vertical"
+            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:hint="@string/locations_input_postcode"
+            >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_location_country"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
-        android:layout_marginEnd="@dimen/activity_margin_horizontal"
-        android:hint="@string/locations_input_country"
-        >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_postcode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:inputType="textCapCharacters"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_location_country"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_country"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textCapWords"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/view_spacing_vertical"
+            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:hint="@string/locations_input_country"
+            >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_location_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
-        android:layout_marginEnd="@dimen/activity_margin_horizontal"
-        android:hint="@string/locations_input_email"
-        >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_country"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:inputType="textCapWords"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_location_email"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionNext"
-            android:inputType="textCapWords"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/view_spacing_vertical"
+            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:hint="@string/locations_input_email"
+            >
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_location_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
-        android:layout_marginEnd="@dimen/activity_margin_horizontal"
-        android:hint="@string/locations_input_phone"
-        >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionNext"
+                android:inputType="textEmailAddress"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_text_location_phone"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:imeOptions="actionDone"
-            android:inputType="textCapWords"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_marginStart="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/view_spacing_vertical"
+            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:hint="@string/locations_input_phone"
+            >
 
-</LinearLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionDone"
+                android:inputType="phone"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </LinearLayout>
+</ScrollView>
