--- a/app/src/main/res/layout/dialog_add_new_product.xml
+++ b/app/src/main/res/layout/dialog_add_new_product.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/dialog_root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -46,36 +47,36 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
- <!--   <LinearLayout
-        android:id="@+id/search_results_layout"
-        style="@style/SearchResultsLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone"
-        >
+    <!--   <LinearLayout
+           android:id="@+id/search_results_layout"
+           style="@style/SearchResultsLayout"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical"
+           android:visibility="gone"
+           >
 
-        <com.martinwalls.nea.components.AddNewTextView
-            android:id="@+id/add_new"
-            style="@style/SearchResultsItemText.Selectable.AddNew"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+           <com.martinwalls.nea.components.AddNewTextView
+               android:id="@+id/add_new"
+               style="@style/SearchResultsItemText.Selectable.AddNew"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               />
 
-        <com.martinwalls.nea.components.CustomRecyclerView
-            android:id="@+id/recycler_view_results"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+           <com.martinwalls.nea.components.CustomRecyclerView
+               android:id="@+id/recycler_view_results"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               />
 
-        <TextView
-            android:id="@+id/no_results"
-            style="@style/SearchResultsItemText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/search_no_matches"
-            />
-    </LinearLayout>-->
+           <TextView
+               android:id="@+id/no_results"
+               style="@style/SearchResultsItemText"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:text="@string/search_no_matches"
+               />
+       </LinearLayout>-->
 
     <RelativeLayout
         android:layout_width="match_parent"
