--- a/app/src/main/res/layout/activity_edit_locations.xml
+++ b/app/src/main/res/layout/activity_edit_locations.xml
@@ -10,6 +10,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/screen_margin_horizontal"
+        android:layout_marginTop="@dimen/screen_margin_top"
+        android:layout_marginEnd="@dimen/screen_margin_horizontal"
         android:orientation="vertical"
         tools:context=".stock.EditLocationsActivity"
         >
@@ -18,9 +21,6 @@
             android:id="@+id/input_layout_location_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_margin_horizontal"
-            android:layout_marginTop="@dimen/view_spacing_vertical"
-            android:layout_marginEnd="@dimen/activity_margin_horizontal"
             android:hint="@string/locations_input_name"
             >
 
@@ -37,9 +37,7 @@
             android:id="@+id/input_layout_location_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_margin_horizontal"
-            android:layout_marginTop="@dimen/view_spacing_vertical"
-            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/input_spacing_vertical"
             android:hint="@string/locations_input_type"
             >
 
@@ -56,9 +54,7 @@
             android:id="@+id/input_layout_addr_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_margin_horizontal"
-            android:layout_marginTop="@dimen/view_spacing_vertical"
-            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/input_spacing_vertical"
             android:hint="@string/locations_input_addr_line_1"
             >
 
@@ -75,9 +71,7 @@
             android:id="@+id/input_layout_addr_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_margin_horizontal"
-            android:layout_marginTop="@dimen/view_spacing_vertical"
-            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/input_spacing_vertical"
             android:hint="@string/locations_input_addr_line_2"
             >
 
@@ -94,9 +88,7 @@
             android:id="@+id/input_layout_city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_margin_horizontal"
-            android:layout_marginTop="@dimen/view_spacing_vertical"
-            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/input_spacing_vertical"
             android:hint="@string/locations_input_city"
             >
 
@@ -113,9 +105,7 @@
             android:id="@+id/input_layout_postcode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_margin_horizontal"
-            android:layout_marginTop="@dimen/view_spacing_vertical"
-            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/input_spacing_vertical"
             android:hint="@string/locations_input_postcode"
             >
 
@@ -132,9 +122,7 @@
             android:id="@+id/input_layout_country"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_margin_horizontal"
-            android:layout_marginTop="@dimen/view_spacing_vertical"
-            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/input_spacing_vertical"
             android:hint="@string/locations_input_country"
             >
 
@@ -151,9 +139,7 @@
             android:id="@+id/input_layout_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_margin_horizontal"
-            android:layout_marginTop="@dimen/view_spacing_vertical"
-            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/input_spacing_vertical"
             android:hint="@string/locations_input_email"
             >
 
@@ -170,9 +156,7 @@
             android:id="@+id/input_layout_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_margin_horizontal"
-            android:layout_marginTop="@dimen/view_spacing_vertical"
-            android:layout_marginEnd="@dimen/activity_margin_horizontal"
+            android:layout_marginTop="@dimen/input_spacing_vertical"
             android:hint="@string/locations_input_phone"
             >
 
