--- a/app/src/main/res/layout/dialog_add_new_meat_type.xml
+++ b/app/src/main/res/layout/dialog_add_new_meat_type.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dialog_margin_horizontal"
         android:layout_marginTop="@dimen/dialog_margin_vertical"
+        android:layout_marginBottom="@dimen/input_spacing_vertical"
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
         android:hint="@string/stock_product_meat_type_input"
         >
@@ -29,7 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dialog_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
         >
 
