--- a/app/src/main/res/layout/dialog_add_new_product.xml
+++ b/app/src/main/res/layout/dialog_add_new_product.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_root"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
@@ -15,6 +15,7 @@
         android:layout_marginStart="@dimen/dialog_margin_horizontal"
         android:layout_marginTop="@dimen/dialog_margin_vertical"
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
+        android:layout_marginBottom="@dimen/input_spacing_vertical"
         android:hint="@string/stock_product_input_name"
         >
 
@@ -33,8 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dialog_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
+        android:layout_marginBottom="@dimen/input_spacing_vertical"
         android:hint="@string/stock_product_input_meat_type"
         >
 
@@ -78,12 +79,12 @@
                />
        </LinearLayout>-->
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dialog_margin_horizontal"
-        android:layout_marginTop="@dimen/view_spacing_vertical"
         android:layout_marginEnd="@dimen/dialog_margin_horizontal"
+        android:orientation="horizontal"
         >
 
         <Button
@@ -91,8 +92,13 @@
             style="?attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:text="@string/stock_product_new_cancel"
+            />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             />
 
         <Button
@@ -100,9 +106,8 @@
             style="?attr/borderlessButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:text="@string/stock_product_new_done"
             />
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
