--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,32 +1,14 @@
 <resources>
-
     <dimen name="fab_margin">24dp</dimen>
 
     <dimen name="nav_drawer_spacing_top">80dp</dimen>
 
-    <!-- Screen margin -->
-    <dimen name="activity_margin_top">16dp</dimen>
-    <dimen name="activity_margin_horizontal">16dp</dimen>
+    <dimen name="screen_margin_top">16dp</dimen>
+    <dimen name="screen_margin_horizontal">16dp</dimen>
 
     <dimen name="dialog_margin_vertical">16dp</dimen>
     <dimen name="dialog_margin_horizontal">16dp</dimen>
 
-    <!-- View spacing -->
-    <dimen name="view_spacing_horizontal">8dp</dimen>
-    <dimen name="view_spacing_vertical">16dp</dimen>
-
-
-    <!-- actual spacing is *2 as it's set on top and bottom -->
-    <dimen name="search_result_spacing">16dp</dimen>
-    <dimen name="search_result_margin_left">24dp</dimen>
-    <dimen name="search_result_margin_right">16dp</dimen>
-
-    <dimen name="choose_currencies_spacing">16dp</dimen>
-    <dimen name="choose_currencies_margin_left">24dp</dimen>
-    <dimen name="choose_currencies_margin_right">16dp</dimen>
-
-    <dimen name="item_spacing">16dp</dimen>
-    <dimen name="item_padding_start">24dp</dimen>
-    <dimen name="item_padding_end">24dp</dimen>
-
+    <dimen name="input_spacing_vertical">16dp</dimen>
+    <dimen name="input_spacing_horizontal">8dp</dimen>
 </resources>
